--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,6 +1,67 @@
 <%- include ('../partials/header') %>
+<link href="../css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+<link href="../css/icons.min.css" id="app-style" rel="stylesheet" type="text/css" />
     </head>
 
     <body>
-        <h1>Login page</h1>
+        <div class="account-pages my-5 pt-sm-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-8 col-lg-6 col-xl-5">
+                        <div class="text-center mb-4">
+                            <h1>Sign in</h1>
+                            <p class="text-muted mb-4">Sign in to continue to ConnectHub.</p>
+                            
+                        </div>
+
+                        <div class="card">
+                            <div class="card-body p-4">
+                                <div class="p-3">
+                                    <form action="https://themesbrand.com/chatvia/layouts/index.html">
+    
+                                        <div class="mb-3">
+                                            <label class="form-label">Username</label>
+                                            <div class="input-group mb-3 bg-soft-light rounded-3">
+                                                <span class="input-group-text text-muted" id="basic-addon3">
+                                                    <i class="ri-user-2-line"></i>
+                                                </span>
+                                                <input type="text" class="form-control form-control-lg border-light bg-soft-light" placeholder="Enter Username" aria-label="Enter Username" aria-describedby="basic-addon3">
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-4">
+                                            <div class="float-end">
+                                                <a href="auth-recoverpw.html" class="text-muted font-size-13">Forgot password?</a>
+                                            </div>
+                                            <label class="form-label">Password</label>
+                                            <div class="input-group mb-3 bg-soft-light rounded-3">
+                                                <span class="input-group-text text-muted" id="basic-addon4">
+                                                    <i class="ri-lock-2-line"></i>
+                                                </span>
+                                                <input type="password" class="form-control form-control-lg border-light bg-soft-light" placeholder="Enter Password" aria-label="Enter Password" aria-describedby="basic-addon4">
+                                                
+                                            </div>
+                                        </div>
+
+                                        <div class="form-check mb-4">
+                                            <input type="checkbox" class="form-check-input" id="remember-check">
+                                            <label class="form-check-label" for="remember-check">Remember me</label>
+                                        </div>
+
+                                        <div class="d-grid">
+                                            <button class="btn btn-primary waves-effect waves-light" type="submit">Sign in</button>
+                                        </div>
+
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="mt-5 text-center">
+                            <p>Don't have an account ? <a href="auth-register.html" class="fw-medium text-primary"> Signup now </a> </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <%- include ('../partials/footer') %>
