--- a/views/auth/new-pwd.ejs
+++ b/views/auth/new-pwd.ejs
@@ -14,31 +14,27 @@
                                 <img src="assets/images/logo-light.png" alt="" height="30" class="logo logo-light">
                             </a>
 
-                            <h1>Reset Password</h1>
-                            <p class="text-muted mb-4">Reset Password With ConnectHub.</p>
+                            <h4>New Password</h4>
+                            <p class="text-muted mb-4">Enter your new password</p>
                             
                         </div>
 
                         <div class="card">
                             <div class="card-body p-4">
                                 <div class="p-3">
-                                    <div class="alert alert-success text-center mb-4" role="alert">
-                                        Enter your Email and instructions will be sent to you!
-                                    </div>
                                     <form action="https://themesbrand.com/chatvia/layouts/index.html">
-    
                                         <div class="mb-4">
-                                            <label class="form-label">Email</label>
-                                            <div class="input-group mb-3 bg-soft-light rounded-3">
-                                                <span class="input-group-text text-muted" id="basic-addon5">
-                                                    <i class="ri-mail-line"></i>
+                                            <label class="form-label">Password</label>
+                                            <div class="input-group bg-soft-light rounded-3 mb-3">
+                                                <span class="input-group-text text-muted" id="basic-addon2">
+                                                    <i class="ri-lock-2-line"></i>
                                                 </span>
-                                                <input type="email" class="form-control form-control-lg border-light bg-soft-light" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="basic-addon5">                                                
+                                                <input type="password" class="form-control form-control-lg bg-soft-light" placeholder="Enter New Password" aria-label="Enter Password" aria-describedby="basic-addon2">
                                             </div>
                                         </div>
 
                                         <div class="d-grid">
-                                            <button class="btn btn-primary waves-effect waves-light" type="submit">Reset</button>
+                                            <button class="btn btn-primary waves-effect waves-light" type="submit">Update</button>
                                         </div>
 
                                     </form>
@@ -47,7 +43,7 @@
                         </div>
 
                         <div class="mt-5 text-center">
-                            <p>Remember It ? <a href="auth-login.html" class="fw-medium text-primary"> Signin </a> </p>
+                            <p>Not you ? return <a href="auth-login.html" class="fw-medium text-primary"> Signin </a> </p>
                         </div>
                     </div>
                 </div>
