--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -1,4 +1,6 @@
 <%- include ('../partials/header') %>
+<link href="../css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+<link href="../css/icons.min.css" id="app-style" rel="stylesheet" type="text/css" />
     </head>
 
     <body>
