--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,3 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Bootstrap Css -->
+    <link href="../css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
+
+    <link href="../css/style.css" id="app-style" rel="stylesheet" type="text/css" />
